# bddtp5

./: .env.local.example  .env.production  .gitignore  DEMO_GUIDE.md  FEATURES.md  README.md  START_WEBAPP.bat  TP5_TRANSFORMATION_GUIDE.md  package-lock.json  package.json  tailwind.config.ts  tp5.md  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
app/api/progress/: route.ts
app/challenge/[id]/: challenge-client.tsx  page.tsx
app/cheatsheet/: page.tsx
app/course/: page.tsx
app/dashboard/: page.tsx
app/flashcards/: page.tsx
app/lesson/[id]/: lesson-client.tsx  page.tsx
app/practice/: page.tsx
app/queries/: page.tsx
app/query/[id]/: page.tsx  query-client.tsx
app/questions/: page.tsx
app/schema/: page.tsx
components/: code-block.tsx  footer.tsx  main-nav.tsx  query-tester.tsx  scroll-progress.tsx  theme-provider.tsx
components/ui/: tabs.tsx
lib/: achievements-data.ts  api.ts  challenges-data.ts  cheatsheet-data.ts  flashcards-data.ts  lessons-data.ts  queries-data.ts  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
tp5-data/: TRANSFORMATION_PROMPT.md  challenges-data.ts  flashcards-data.ts  lessons-data.ts  queries-data.ts  schema-data.ts
