[package]
name = "tp5-ultimate-guide"
version = "0.1.0"
description = "TP5 Ultimate Guide Desktop App"
authors = ["Anes-Chr"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
